--- a/Frontend/.travis.yml
+++ b/Frontend/.travis.yml
@@ -5,3 +5,12 @@ node_js:
 install:
   - npm ci
 
+addons:
+  sonarcloud:
+    organization: "comunidad-de-programadores"
+    token:
+      secure: "**************************" # encrypted value of your token
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
