add travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,12 @@ node_js:
     only:
     - master
 
+    addons:
+  sonarcloud:
+    organization: "comunidad-de-programadores"
+    token:
+      secure: "travis encrypt 736624a4be88fd1b78c94f49060100518fcd01eb" # encrypted value of your token
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - sonar-scanner
