--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.1.0-",
     "@angular/platform-browser-dynamic": "~12.1.0-",
     "@angular/router": "~12.1.0-",
+    "gem": "^2.4.3",
     "rxjs": "~6.6.0",
+    "travis": "^0.1.1",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
