--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
-languaje: node_js
+language: node_js
 node_js:
   - "14.16.0"
 
+before_script:
+  - npm install -g @angular/cli
+
+  script:
+  - ng build --prod
