--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: node_js
 node_js:
   - "14.16.0"
 
+  cache:
+  directories:
+    - ./node_modules
+
+install:
+  - npm install
+
 before_script:
   - npm install -g @angular/cli
 
