add travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,4 @@ node_js:
 
   cache:
   directories:
-    - ./node_modules
-
-install:
-  - npm install
-
-before_script:
-  - npm install -g @angular/cli
-
-  script:
-  - ng build --prod
+    - node_modules
