--- a/Frontend/.travis.yml
+++ b/Frontend/.travis.yml
@@ -2,6 +2,20 @@ language: node_js
 node_js:
   - "14.16.0"
 
+branches:
+  only:
+    - master
+
+  addons:
+    chrome: stable
+
+  before_script:
+    - npm install -g @angular/cli
+
   cache:
-  directories:
-    - node_modules
+    npm: true
+    directories:
+      - node_modules
+
+script:
+  - ng build --prod
